mobile header overlap - fixed?

--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,11 @@ body {
     cursor: none; /* Hide default cursor */
 }
 
+/*Fixed overlaping header to titles*/
+section{
+    scroll-margin-top: 100px;
+}
+
 /* Accent handwritten titles */
 .section-title, .logo {
     font-family: 'Dancing Script', cursive;
@@ -178,7 +183,7 @@ nav {
     padding: 8px 15px;
     border-radius: 20px;
     cursor: pointer;
-    transition: 0.3s;
+    transition: 0.5s;
     color: #5e4b56;
     font-weight: bold;
 }
@@ -277,6 +282,10 @@ footer {
 ================================= */
 
 @media (max-width: 768px) {
+
+    section {
+        scroll-margin-top: 160px;
+    }
 
     nav {
         flex-direction: column;
